// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderReact > matches the generated module snapshots 1`] = `
"// Generated by @klima-ds/icons-core. Do not edit.
import { createIcon } from "../create-icon.js";

const Clip = /* @__PURE__ */ createIcon("Clip", {"xmlns":"http://www.w3.org/2000/svg","fill":"none","viewBox":"0 0 24 24"}, [["g",{"clipPath":"url(#clip-a)"},[["path",{"fill":"currentColor","d":"M2 2h20v20H2z"}]]],["defs",{},[["clipPath",{"id":"clip-a"},[["path",{"fill":"#fff","d":"M2 2h20v20H2z"}]]]]]]);

export default Clip;
export { Clip };
"
`;

exports[`renderReact > matches the generated module snapshots 2`] = `
"// Generated by @klima-ds/icons-core. Do not edit.
export { Clip } from "./clip.js";
export { Stroke } from "./stroke.js";
"
`;

exports[`renderReact > matches the generated module snapshots 3`] = `
"// Generated by @klima-ds/icons-core. Do not edit.
export type { IconComponent, IconProps } from "../create-icon.js";
export { Clip } from "./clip.js";
export { Stroke } from "./stroke.js";
"
`;
